{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 12,
  "lineage": "50a88ea6-2176-8d40-6073-85239fbbff08",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-052355af2a014bd2c",
            "arn": "arn:aws:ec2:us-east-1:857753985193:instance/i-0e39bf69c30099341",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e39bf69c30099341",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Ugo-demo-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06ef5714ba8504342"
              }
            ],
            "primary_network_interface_id": "eni-06ef5714ba8504342",
            "private_dns": "ip-10-0-1-67.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.67",
            "public_dns": "ec2-100-31-46-12.compute-1.amazonaws.com",
            "public_ip": "100.31.46.12",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03cdf6fcb1f3e6e68",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0223acf112cb12e71",
            "tags": {
              "Name": "devops-production-target"
            },
            "tags_all": {
              "Name": "devops-production-target"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00cf3178a9fa444a3"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "857753985193",
            "id": "i-0e39bf69c30099341",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.devops_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.devops_vpc",
            "data.aws_ami.latest_ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:857753985193:internet-gateway/igw-0f76f99a9375c9439",
            "id": "igw-0f76f99a9375c9439",
            "owner_id": "857753985193",
            "region": "us-east-1",
            "tags": {
              "Name": "devops-gateway"
            },
            "tags_all": {
              "Name": "devops-gateway"
            },
            "vpc_id": "vpc-087794858e196af99"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "857753985193",
            "id": "igw-0f76f99a9375c9439",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:857753985193:route-table/rtb-0565fe24aa8d83752",
            "id": "rtb-0565fe24aa8d83752",
            "owner_id": "857753985193",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f76f99a9375c9439",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-public-rt"
            },
            "tags_all": {
              "Name": "devops-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-087794858e196af99"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "857753985193",
            "id": "rtb-0565fe24aa8d83752",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031b8d645aafee380",
            "region": "us-east-1",
            "route_table_id": "rtb-0565fe24aa8d83752",
            "subnet_id": "subnet-0223acf112cb12e71"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "857753985193",
            "id": "rtbassoc-031b8d645aafee380",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:857753985193:security-group/sg-00cf3178a9fa444a3",
            "description": "Pipeline control and application web access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00cf3178a9fa444a3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Java Microservice Engine",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Portfolio UI Web Interface",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Access for Deployment",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "devops-firewall-rules",
            "name_prefix": "",
            "owner_id": "857753985193",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-security-group"
            },
            "tags_all": {
              "Name": "devops-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-087794858e196af99"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "857753985193",
            "id": "sg-00cf3178a9fa444a3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:857753985193:subnet/subnet-0223acf112cb12e71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0223acf112cb12e71",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "857753985193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "devops-public-subnet"
            },
            "tags_all": {
              "Name": "devops-public-subnet"
            },
            "vpc_id": "vpc-087794858e196af99"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "857753985193",
            "id": "subnet-0223acf112cb12e71",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devops_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:857753985193:vpc/vpc-087794858e196af99",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04be562e11c53e01f",
            "default_route_table_id": "rtb-0a98cc75b956dab58",
            "default_security_group_id": "sg-0beeed23184fae51b",
            "dhcp_options_id": "dopt-0abba1c8b087da7cf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-087794858e196af99",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a98cc75b956dab58",
            "owner_id": "857753985193",
            "region": "us-east-1",
            "tags": {
              "Name": "devops-school-vpc"
            },
            "tags_all": {
              "Name": "devops-school-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "857753985193",
            "id": "vpc-087794858e196af99",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}